fix last line misalignment

--- a/src/components/Items/styles/_SoulshieldList.scss
+++ b/src/components/Items/styles/_SoulshieldList.scss
@@ -77,8 +77,9 @@
 
             .soulshield-piece {
                 padding: 1rem 0;
-                min-width: 25%;
                 max-width: 50%;
+                min-width: 25%;
+                width: 20rem;
 
                 &.hidden {
                     padding: 0;
